Landing Page Mockup complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,71 @@
   <script src="./app.js"></script>
   <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-  
+<div class="page__container">
+  <section id="landing">
+    <div class="row">
+      <nav>
+        <a href="#">
+          <figure class="logo__container">
+            <img class="logo__img" src="./assets/logo.svg" alt=""> <span class="logo__text">Treact</span> 
+          </figure>
+        </a>
+        <div class="nav__list--container">
+          <ul class="nav__list">
+            <li><a class="nav__link" href="#">About</a></li>
+            <li><a class="nav__link" href="#">Blog</a></li>
+            <li><a class="nav__link" href="#">Pricing</a></li>
+            <li><a class="nav__link" href="#">Contact Us</a></li>
+            <li><a class="nav__link nav__link--account" href="#">Login</a></li>
+            <li><a class="nav__link--cta curve--border" href="#">Sign Up</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="header__container">
+          <div class="header__text">
+            <h1>Beautiful React Templates 
+              <span class="highlight--text">for you.</span>
+            </h1>
+            <p class="header__text--para">Our templates are easy 
+              to setup, understand and customize. Fully modular 
+              components with a variety of pages and components.
+            </p>
+
+            <div class="header__text--email">
+              <input type="email" class="header__text--input curve--border" placeholder="Your E-mail Address">
+              <button class="header__text--btn curve--border">Get Started</button>
+            </div>
+            
+            <div class="header__customers">
+              <p>OUR TRUSTED CUSTOMERS</p>
+              <figure class="header__customers--img--wrapper">
+                <img src="./assets/customers.png" alt="">
+              </figure>
+            </div>
+
+            <!-- <div class="header__text--customers">
+              <p>OUR TRUSTED CUSTOMERS</p>
+              <figure class="header__text--customers--img">
+                <img src="./assets/customers.png" alt="">
+              </figure>
+            </div> -->
+          </div>
+          <figure class="header__img--wrapper">
+            <img class="header__img" src="./assets/landing-img.svg" alt="">
+          </figure>
+        </div>
+      </div>
+    </div>
+  </section>
+
+</div>
 </body>
 </html>
