Completed Steps Section, Began Values Section Mock

--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
           </div>
-
           <div class="features__list">
             <div class="features__service">
               <span class="features__service--icon--wrapper">
-                <img src="./assets/icons/secure-icon.svg" class="features__service--icon" alt="">
+                <i src="./assets/icons/secure-icon.svg" class="features__service--icon" alt=""></i>
               </span>
               
               <div class="features__service--description">
@@ -155,17 +154,93 @@
             <figure class="steps__img--container">
               <img class="steps__img" src="./assets/hero-screenshot-templates.png" alt="">
             </figure>
-            <div class="steps__description">
+            <div class="steps__information">
               <span class="section--title">STEPS</span>
               <h2 class="section--heading">Easy to <span class="highlight--text">Get Started.</span></h2>
-              <div class="step"></div>
-              <div class="step"></div>
-              <div class="step"></div>
+
+              <div class="steps__list">
+                <div class="step">
+                  <span class="step__number">01</span>
+                  <div class="step__description">
+                    <h6 class="step__description--title">Register</h6>
+                    <p class="step__description--para">
+                      Create an account with us using Google or Facebook.
+                    </p>
+                  </div>
+                </div>
+                <div class="step">
+                  <span class="step__number">02</span>
+                  <div class="step__description">
+                    <h6 class="step__description--title">Download</h6>
+                    <p class="step__description--para">
+                      Browse and Download the template that you like
+                       from the marketplace.
+                    </p>
+                  </div>
+                </div>
+                <div class="step">
+                  <span class="step__number">03</span>
+                  <div class="step__description">
+                    <h6 class="step__description--title">Run</h6>
+                    <p class="step__description--para">
+                      Follow the instructions to setup and customize
+                       the template to your needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
     </section> <!-- END OF STEPS -->
+
+    <section> <!-- VALUES -->
+      <div class="container">
+        <div class="row">
+          <div class="section__container">
+            <div class="values__description">
+              <span class="section--title">VALUES</span>
+              <h2 class="section--heading">We Always Abide by Our 
+                <span class="highlight--text">Principles.</span>
+              </h2>
+              <p class="values__description--para">
+                Lorem ipsum dolor sit amet, consectetur adipiscing 
+                 elit, sed do eiusmod tempor incididunt ut labore et  
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud   
+                   exercitation ullamco laboris nisi ut aliquip ex ea commodo    
+                consequat.
+              </p>
+
+              <div class="values__features">
+                <div class="values__feature">
+                  <i src="./assets/icons/"></i>
+                  <h6>Affordable</h6>
+                  <p class="values__feature--para">
+                    We promise to offer you the best rate we can 
+                    - at par with the industry standard.
+                  </p>
+                </div>
+                <div class="values__feature">
+                  <i src="./assets/icons/"></i>
+                  <h6>Profressionalism</h6>
+                  <p class="values__feature--para">
+                    We assure you that our templates are designed 
+                    and created by professional designers.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <figure class="values__img--container">
+              <img class="values__img" src="./assets/prototype-illustration.svg" alt="">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section> <!-- END OF VALUES -->
+    
   </main>
 </div>
 </body>
