--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             </div>
             
             <div class="header__customers">
-              <p>OUR TRUSTED CUSTOMERS</p>
+              <p class="header__customers--para">OUR TRUSTED CUSTOMERS</p>
               <figure class="header__customers--img--wrapper">
-                <img src="./assets/customers.png" alt="">
+                <img class="header__customers--img" src="./assets/customers.png" alt="">
               </figure>
             </div>
 
@@ -86,10 +86,40 @@
           </div>
           <div class="features__list">
             <div class="features__service">
-              <span class="features__service--icon--wrapper">
+              <figure class="features__service--icon--wrapper">
                 <i src="./assets/icons/secure-icon.svg" class="features__service--icon" alt=""></i>
-              </span>
+              </figure>
               
+              <div class="features__service--description">
+                <span class="features__service--title">Secure</span>
+                <p class="features__service--para">
+                   We strictly only deal with vendors that provide top 
+                   notch security.
+                </p>
+              </div>
+            </div>
+            <div class="features__service">
+              <img src="./assets/icons/secure-icon.svg" class="features__service--icon" alt="">
+              <div class="features__service--description">
+                <span class="features__service--title">Secure</span>
+                <p class="features__service--para">
+                   We strictly only deal with vendors that provide top 
+                   notch security.
+                </p>
+              </div>
+            </div>
+            <div class="features__service">
+              <img src="./assets/icons/secure-icon.svg" class="features__service--icon" alt="">
+              <div class="features__service--description">
+                <span class="features__service--title">Secure</span>
+                <p class="features__service--para">
+                   We strictly only deal with vendors that provide top 
+                   notch security.
+                </p>
+              </div>
+            </div>
+            <div class="features__service">
+              <img src="./assets/icons/secure-icon.svg" class="features__service--icon" alt="">
               <div class="features__service--description">
                 <span class="features__service--title">Secure</span>
                 <p class="features__service--para">
@@ -137,7 +167,7 @@
                   veniam, quis nostrud exercitation ullamco laboris
                   nisi ut aliquip ex ea commodo consequat.
               </p>
-              <button class="quality__description--btn curve--border">Learn More</button>
+              <button class="btn--learn-more curve--border">Learn More</button>
             </div>
             <figure class="quality__img--container">
               <img class="quality__img" src="./assets/hero-screenshot.png" alt="">
@@ -231,6 +261,7 @@
                   </p>
                 </div>
               </div>
+              <button class="btn--learn-more curve--border">Learn More</button>
             </div>
 
             <figure class="values__img--container">
